objects/LAT_MX_CS003_OnTradeAccountDocuments__mdt.object
<CustomObject>
    <description>This Custom Seeting administrates the document types that have to be attached to the OnTrade Account records for Mexico.</description>
    <fields>
        <fullName>LAT_MX_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RequiredForCenter__c</fullName>
        <label>Required for Center</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RequiredForFiscalEntityType__c</fullName>
        <label>Required for Fiscal Entity Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RequiredForType__c</fullName>
        <label>Required For Type</label>
        <type>TextArea</type>
    </fields>
    <label>LAT_MX_CS003_OnTradeAccountDocuments</label>
    <pluralLabel>LAT_MX_CS003_OnTradeAccountDocuments</pluralLabel>
</CustomObject>